--- a/problems/problem1.html
+++ b/problems/problem1.html
@@ -69,7 +69,206 @@
         return adjugate;
     }
 
+    // Same disp-based dist formula, similar to U2_PA problem 6. Just gonna shape it to support 3D.
 
+    // Idea: make two sets of controllable SE(3) elements, then an ineditable field at the bottom displaying the distance
+    // between the two SE(3) elements.
+
+    // All code below are coded by me:
+    // Import needed helpers
+    import {get_default_lil_gui} from "../js/utils/utils_three.js";
+    import {mul_matrix_matrix, mul_matrix_scalar, sub_matrix_matrix, transpose} from "../js/utils/utils_math.js";
+    import {refresh_displays} from "../js/utils/utils_three.js";
+    import {frobenius_norm_matrix} from "../js/utils/utils_math.js";
+    import {add_matrix_matrix, identity_matrix} from "../js/utils/utils_math.js";
+
+    // Init engine
+    let engine = ThreeEngine.new_default_3d();
+
+    // The entries values of SE(3)_1 and SE(3)_2 at theta_1=0, theta_2=0, theta_3=0, tx=0, ty=0, tz=0.
+    let m_1 = [ [1, 0, 0, 0],
+                [0, 1, 0, 0],
+                [0, 0, 1, 0],
+                [0, 0, 0, 1] ]
+    let m_2 = [ [1, 0, 0, 0],
+                [0, 1, 0, 0],
+                [0, 0, 1, 0],
+                [0, 0, 0, 1] ]
+
+    // Set up the GUI
+    let settings = {
+        tx1: 0,
+        ty1: 0,
+        tz1: 0,
+        theta1_1: 0,
+        theta2_1: 0,
+        theta3_1: 0,
+        tx2: 0,
+        ty2: 0,
+        tz2: 0,
+        theta1_2: 0,
+        theta2_2: 0,
+        theta3_2: 0,
+        disp_based_dist_string: 0
+    }
+
+    let actions = {
+        reset1: function() {
+            settings.theta1_1 = 0;
+            settings.theta2_1 = 0;
+            settings.theta3_1 = 0;
+            settings.tx1 = 0;
+            settings.ty1 = 0;
+            settings.tz1 = 0;
+            refresh_displays(gui);
+            m_1 = [ [1, 0, 0, 0],
+                    [0, 1, 0, 0],
+                    [0, 0, 1, 0],
+                    [0, 0, 0, 1] ]
+        },
+        reset2: function() {
+            settings.theta1_2 = 0;
+            settings.theta2_2 = 0;
+            settings.theta3_2 = 0;
+            settings.tx2 = 0;
+            settings.ty2 = 0;
+            settings.tz2 = 0;
+            refresh_displays(gui);
+            m_2 = [ [1, 0, 0, 0],
+                    [0, 1, 0, 0],
+                    [0, 0, 1, 0],
+                    [0, 0, 0, 1] ]
+        }
+    };
+
+    let gui = get_default_lil_gui();
+    let angle_dof = 2*3.14;  // cap at 6.28 instead of 2*Math.PI, otherwise truncating the noise causes oscilliation.
+    gui.add(settings, 'theta1_1', -angle_dof, angle_dof).name('Theta1_1');
+    gui.add(settings, 'theta2_1', -angle_dof, angle_dof).name('Theta2_1');
+    gui.add(settings, 'theta3_1', -angle_dof, angle_dof).name('Theta3_1');
+    gui.add(settings, 'tx1', -2, 2).name('tx1');
+    gui.add(settings, 'ty1', -2, 2).name('ty1');
+    gui.add(settings, 'tz1', -2, 2).name('tz1');
+    gui.add(actions, 'reset1').name('reset1');  // the button
+    gui.add(settings, 'theta1_2', -angle_dof, angle_dof).name('Theta1_2');
+    gui.add(settings, 'theta2_2', -angle_dof, angle_dof).name('Theta2_2');
+    gui.add(settings, 'theta3_2', -angle_dof, angle_dof).name('Theta3_2');
+    gui.add(settings, 'tx2', -2, 2).name('tx2');
+    gui.add(settings, 'ty2', -2, 2).name('ty2');
+    gui.add(settings, 'tz2', -2, 2).name('tz2');
+    gui.add(actions, 'reset2').name('reset2');  // the button
+    gui.add(settings, 'disp_based_dist_string').name('disp based dis').disable();
+
+    // Draw the visualization
+    engine.animation_loop(function() {
+        // Update the SO(3) portion in SE(3) based on theta1, theta2, theta3.
+        // Update the Translation portion in SE(3) based on tx, ty, and tz.
+        // for both m_1 and m_2.
+        m_1 = [ [Math.cos(settings.theta2_1)*Math.cos(settings.theta3_1), -Math.cos(settings.theta2_1)*Math.sin(settings.theta3_1), Math.sin(settings.theta2_1), settings.tx1],
+                [Math.cos(settings.theta3_1)*Math.sin(settings.theta1_1)*Math.sin(settings.theta2_1)+Math.cos(settings.theta1_1)*Math.sin(settings.theta3_1), Math.cos(settings.theta1_1)*Math.cos(settings.theta3_1)-Math.sin(settings.theta1_1)*Math.sin(settings.theta2_1)*Math.sin(settings.theta3_1), -Math.cos(settings.theta2_1)*Math.sin(settings.theta1_1), settings.ty1],
+                [-Math.cos(settings.theta1_1)*Math.cos(settings.theta3_1)*Math.sin(settings.theta2_1)+Math.sin(settings.theta1_1)*Math.sin(settings.theta3_1), Math.cos(settings.theta3_1)*Math.sin(settings.theta1_1)+Math.cos(settings.theta1_1)*Math.sin(settings.theta2_1)*Math.sin(settings.theta3_1), Math.cos(settings.theta1_1)*Math.cos(settings.theta2_1), settings.tz1],
+                [0, 0, 0, 1] ]
+        m_2 = [ [Math.cos(settings.theta2_2)*Math.cos(settings.theta3_2), -Math.cos(settings.theta2_2)*Math.sin(settings.theta3_2), Math.sin(settings.theta2_2), settings.tx2],
+                [Math.cos(settings.theta3_2)*Math.sin(settings.theta1_2)*Math.sin(settings.theta2_2)+Math.cos(settings.theta1_2)*Math.sin(settings.theta3_2), Math.cos(settings.theta1_2)*Math.cos(settings.theta3_2)-Math.sin(settings.theta1_2)*Math.sin(settings.theta2_2)*Math.sin(settings.theta3_2), -Math.cos(settings.theta2_2)*Math.sin(settings.theta1_2), settings.ty2],
+                [-Math.cos(settings.theta1_2)*Math.cos(settings.theta3_2)*Math.sin(settings.theta2_2)+Math.sin(settings.theta1_2)*Math.sin(settings.theta3_2), Math.cos(settings.theta3_2)*Math.sin(settings.theta1_2)+Math.cos(settings.theta1_2)*Math.sin(settings.theta2_2)*Math.sin(settings.theta3_2), Math.cos(settings.theta1_2)*Math.cos(settings.theta2_2), settings.tz2],
+                [0, 0, 0, 1] ]
+
+        // Obtain the standard vector for each m.
+        let c1 = [ [1], [0], [0], [1] ];  // 1-appended
+        let c2 = [ [0], [1], [0], [1] ];
+        let c3 = [ [0], [0], [1], [1] ];
+        let c1_m1 = mul_matrix_matrix(m_1, c1).slice(0, 3),  // apply the transformation
+            c2_m1 = mul_matrix_matrix(m_1, c2).slice(0, 3),
+            c3_m1 = mul_matrix_matrix(m_1, c3).slice(0, 3),
+            c1_m2 = mul_matrix_matrix(m_2, c1).slice(0, 3),
+            c2_m2 = mul_matrix_matrix(m_2, c2).slice(0, 3),
+            c3_m2 = mul_matrix_matrix(m_2, c3).slice(0, 3);
+        // Draw the vectors. Visualization is done.
+        engine.draw_debug_vector([settings.tx1, settings.ty1, settings.tz1], c1_m1, 0.035, undefined, 0xff0000);
+        engine.draw_debug_vector([settings.tx1, settings.ty1, settings.tz1], c2_m1, 0.035, undefined, 0x00ff00);
+        engine.draw_debug_vector([settings.tx1, settings.ty1, settings.tz1], c3_m1, 0.035, undefined, 0x0000ff);
+        engine.draw_debug_vector([settings.tx2, settings.ty2, settings.tz2], c1_m2, 0.035, undefined, 0x974a47);
+        engine.draw_debug_vector([settings.tx2, settings.ty2, settings.tz2], c2_m2, 0.035, undefined, 0x68a752);
+        engine.draw_debug_vector([settings.tx2, settings.ty2, settings.tz2], c3_m2, 0.035, undefined, 0xaddae6);
+
+        // Calculate disp-based dist.
+        // Step 1: find disp(m1, m2) = m1^-1 MATMUL m2.
+        // Construct m1_inverse first.
+        // 1) Extract R (the m1_SO(3) matrix) from m1_SE(3) and transpose it
+        let R = [ m_1[0].slice(0, 3), m_1[1].slice(0, 3), m_1[2].slice(0, 3) ];
+        let R_T = transpose(R);
+        // 2) computed the inverse of translation vector via -R.T matmul t.
+        let t = [ [m_1[0][3]], [m_1[1][3]], [m_1[2][3]] ];  // t
+        let t_inv = mul_matrix_matrix(R_T, mul_matrix_scalar(t, -1));
+        // 3) compose the m1_inv (composed of R_T and t_inv) and get disp
+        let m1_inverse = [ [R_T[0][0], R_T[0][1], R_T[0][2], t_inv[0][0]],
+                           [R_T[1][0], R_T[1][1], R_T[1][2], t_inv[1][0]],
+                           [R_T[2][0], R_T[2][1], R_T[2][2], t_inv[2][0]],
+                           [0, 0, 0, 1] ];
+        let disp = mul_matrix_matrix(m1_inverse, m_2);  // a 4x4 matrix in SE(3).
+
+        // Step 2: take the ln of disp(m1, m2). Log-mapping for SE(3) (from pset answer)
+        // 1) Extract R in disp_SO(3) from disp_SE(3)
+        R = [ disp[0].slice(0, 3), disp[1].slice(0, 3), disp[2].slice(0, 3) ];
+        R_T = transpose(R);
+        // 2) Obtain A = ln(R_disp)
+        let epsilon = 0.0001;  // the threshold
+        let tr_R = R[0][0] + R[1][1] + R[2][2];
+        let beta = Math.acos((tr_R - 1) / 2);
+        let A;
+        if (Math.abs(beta) < epsilon) {
+            A = mul_matrix_scalar(sub_matrix_matrix(R, R_T), (1/2 + (beta**2)/12 + 7*(beta**4)/720));
+        }
+        else if (Math.abs(beta - Math.PI) < epsilon) {
+            let c = Math.PI * Math.sqrt((1/2) * (R[2][2] + 1));  // a3
+            let b = Math.PI * Math.sqrt((1/2) * (R[1][1] + 1));  // a2
+            let a = Math.PI * Math.sqrt((1/2) * (R[0][0] + 1));  // a1
+            A = [ [0, -c, b],
+                  [c, 0, -a],
+                  [-b, a, 0] ];
+        }
+        else {
+            A = mul_matrix_scalar(sub_matrix_matrix(R, R_T), beta/(2*Math.sin(beta)));
+        }
+        // 3) Map from t_disp in Lie group to translation in Lie algebra.
+        let a1 = A[2][1];
+        let a2 = A[0][2];
+        let a3 = A[1][0];
+        let u = [a1, a2, a3];
+        beta = frobenius_norm_matrix(u);
+        let p_prime, q_prime;
+        if (beta < epsilon) {
+            p_prime = 1/2 - (beta**2)/24 + (beta**4)/720;
+            q_prime = 1/6 - (beta**2)/120
+        }
+        else {
+            p_prime = (1 - Math.cos(beta)) / (beta**2);
+            q_prime = (beta - Math.sin(beta)) / (beta**3);
+        }
+        // Construct the M matrix (in pset)
+        let M = add_matrix_matrix(add_matrix_matrix(identity_matrix(3), mul_matrix_scalar(A, p_prime)),
+            mul_matrix_scalar(mul_matrix_matrix(A, A), q_prime));
+        t = [ [disp[0][3]], [disp[1][3]], [disp[2][3]] ];  // t_disp
+        let b = mul_matrix_matrix(matrix_inverse_3x3(M), t)
+        // 4) Compose the ln of disp lie algebra matrix.
+        let ln_disp = [ [A[0][0], A[0][1], A[0][2], b[0][0]],
+                        [A[1][0], A[1][1], A[1][2], b[1][0]],
+                        [A[2][0], A[2][1], A[2][2], b[2][0]],
+                        [0, 0, 0, 0] ];
+
+        // Step 3: Map ln_disp to its corresponding Euclidean space via distinct values
+        let a4 = b[0][0];
+        let a5 = b[1][0];
+        let a6 = b[2][0];
+        let I = [[a1], [a2], [a3], [a4], [a5], [a6]];  // apply the vee operation
+
+        // Step 4: Calculate the L-2 norm of the vector I. Done!
+        let dist = frobenius_norm_matrix(I);
+
+        // Update the string value of dist.
+        settings.disp_based_dist_string = dist.toString();
+        refresh_displays(gui);
+    });
 
 </script>
 </body>
