--- a/problems/problem2.html
+++ b/problems/problem2.html
@@ -21,10 +21,114 @@
 <body>
 <script type="module">
     import {get_default_lil_gui, ThreeEngine, refresh_displays} from "../js/utils/utils_three.js";
+    import {dot_product, mul_matrix_scalar, add_matrix_matrix, cross_product, frobenius_norm_matrix} from "../js/utils/utils_math.js";
 
     // todo: create a visualization that demonstrates your knowledge of quaternions.  This is intentionally
     // todo: open-ended.  Be as creative as you want, or feel free to recreate any of the visualizations
     // todo: found in Section 3.3.
+
+    // Assume the involvement of the H1 lie group isn't necessary.
+    // So going to copy the monkey visualization from 3.3.11
+
+    // Helper functions I defined
+    function multiply_quaternions(q1, q2) {
+        // Given two quaternions in [w, i, j, k] format, multiply them and return the result
+        // Same formula from 3.3.7
+        let w1 = q1[0], v1 = [ [q1[1]], [q1[2]], [q1[3]] ];  // w + [i, j, k]
+        let w2 = q2[0], v2 = [ [q2[1]], [q2[2]], [q2[3]] ];
+        let new_scalar = w1*w2 - dot_product(v1, v2);
+        let new_vector = add_matrix_matrix(
+            add_matrix_matrix(mul_matrix_scalar(v2, w1), mul_matrix_scalar(v1, w2)),
+            cross_product(v1, v2)
+        );
+        return [new_scalar, new_vector[0][0], new_vector[1][0], new_vector[2][0]];
+    }
+
+    // Init engine and spawn the monkey shape
+    let engine = ThreeEngine.new_default_3d();
+    engine.add_suzanne_monkey_as_mesh_object(0x00eeff);
+    engine.toggle_mesh_object_visibility(0);  // remove the mesh, only keeps wireframe
+
+    // Set up the GUI
+    let settings = {
+        quaternions_visible: true,
+        wireframe_visible: true,
+        theta1: 0,
+        theta2: 0,
+        theta3: 0,
+        w: 1,
+        x: 0,
+        y: 0,
+        z: 0,
+        norm: 1
+    }
+
+    let actions = {
+        reset: function () {
+            settings.theta1 = 0;
+            settings.theta2 = 0;
+            settings.theta3 = 0;
+            refresh_displays(gui);
+        }
+    };
+
+    let gui = get_default_lil_gui();
+    let angle_of_freedom = 3.14;
+    gui.add(settings, 'quaternions_visible').name('display quaternions');
+    gui.add(settings, 'wireframe_visible').name('display wireframe');
+    gui.add(settings, 'theta1', -angle_of_freedom, angle_of_freedom).name('theta1');
+    gui.add(settings, 'theta2', -angle_of_freedom, angle_of_freedom).name('theta2');
+    gui.add(settings, 'theta3', -angle_of_freedom, angle_of_freedom).name('theta3');
+    gui.add(settings, 'w', -2, 2).name('w').disable();
+    gui.add(settings, 'x', -2, 2).name('x').disable();
+    gui.add(settings, 'y', -2, 2).name('y').disable();
+    gui.add(settings, 'z', -2, 2).name('z').disable();
+    gui.add(settings, 'norm').name('norm').disable();
+    gui.add(actions, 'reset').name('reset');
+
+    // Create the points
+    let wireframe_points = engine.get_local_vertex_positions_of_mesh_object_wireframe(0);
+
+    // Draw the visualization
+    engine.animation_loop(function() {
+        // NOTE: going to represent quaternion in 4D: [w, i, j, k]
+        // Plug in thetas into the quaternion functions deduced
+        let qx_theta1 = [Math.cos(settings.theta1), Math.sin(settings.theta1), 0, 0];
+        let qy_theta2 = [Math.cos(settings.theta2), 0, Math.sin(settings.theta2), 0];
+        let qz_theta3 = [Math.cos(settings.theta3), 0, 0, Math.sin(settings.theta3)];
+
+        // Chain multiply them into a transformation quaternion
+        let q_comb = multiply_quaternions(qx_theta1, multiply_quaternions(qy_theta2, qz_theta3));
+        // Take the conjugate (simplified from inverse) of the Transformation
+        let q_comb_star = [ q_comb[0], -q_comb[1], -q_comb[2], -q_comb[3] ];  // from 3.3.3
+
+        // Update the points of the mesh (mapping)
+        let updated_points = [];
+        let sparsity = 10;  // only displaying the quaternion w/ interval at sparsity, else too crowded.
+        for (let i = 0; i < wireframe_points.length; i++) {
+            let point = wireframe_points[i];
+            // Create the 0 + pi, or [0, i, j, k] quaternion from point
+            let p = [0, point[0], point[1], point[2]];
+            let p_updated = multiply_quaternions(q_comb, multiply_quaternions(p, q_comb_star));
+            // Optionally display the 4th dimensional w based on the option
+            if (settings.quaternions_visible && (i % sparsity === 0)) {
+                engine.draw_debug_wxyz_quaternion(p_updated, 0x9999ff, undefined, undefined, undefined, 0.5, 0.5, 0.01);
+            }
+            updated_points.push(p_updated.slice(1, 4));  // i, j, k as if in 3D's x, y, z
+        }
+
+        // Actualize the update in the scene
+        engine.update_vertex_positions_of_mesh_object_wireframe(0, updated_points);
+        engine.set_mesh_object_wireframe_visibility(0, settings.wireframe_visible);
+
+        // Update GUI statistics
+        settings.w = q_comb[0];  // Current composite quaternion
+        settings.x = q_comb[1];
+        settings.y = q_comb[2];
+        settings.z = q_comb[3];
+        settings.norm = frobenius_norm_matrix(q_comb);  // L2 norm of the quaternion
+        refresh_displays(gui);
+    });
 
 </script>
 </body>
